--- a/ncpc/fpssetup.setval.ncpc.conf
+++ b/ncpc/fpssetup.setval.ncpc.conf
@@ -58,6 +58,7 @@ setval compfCM-2.CPAmax 5.0
 setval wfs2cmodeval-2.procinfo.RTprio 48
 setval wfs2cmodeval-2.procinfo.cset aol2RT
 setval wfs2cmodeval-2.GPUindex 0
+setval wfs2cmodeval-2.insname aol2_imWFS2
 
 setval mfilt-2.AOloopindex 2
 setval mfilt-2.procinfo.RTprio 48
