updated ncpc config

--- a/ncpc/fpssetup.setval.ncpc.conf
+++ b/ncpc/fpssetup.setval.ncpc.conf
@@ -59,11 +59,11 @@ setval wfs2cmodeval-2.procinfo.RTprio 48
 setval wfs2cmodeval-2.procinfo.cset aol2RT
 setval wfs2cmodeval-2.GPUindex 0
 setval wfs2cmodeval-2.insname aol2_imWFS2
+setval wfs2cmodeval-2.procinfo.triggersname aol2_imWFS2
 
 setval mfilt-2.AOloopindex 2
 setval mfilt-2.procinfo.RTprio 48
 setval mfilt-2.procinfo.cset aol2RT
-setval mfilt-2.insname aol0_imWFS2
 setval mfilt-2.procinfo.triggersname aol2_imWFS2
 
 setval mvalC2dm-2.procinfo.RTprio 48
